force-app/main/default/objects/Agr_CBLC__c/Agr_CBLC__c.object-meta.xml
<CustomObject>
    <label>CBLC</label>
    <nameField>
        <label>CBLC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CBLCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>