force-app/main/default/objects/Agr_CBLC__c/fields/Agr_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Agr_AccountId__c</fullName>
    <label>Nome do cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CBLCs</relationshipLabel>
    <relationshipName>CBLCs1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>