force-app/main/default/objects/Agr_CBLC__c/fields/Agr_BovespaAffinityGroup__c.field-meta.xml
<CustomField>
    <fullName>Agr_BovespaAffinityGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Afinidade</label>
    <referenceTo>Agr_AffinityGroup__c</referenceTo>
    <relationshipLabel>CBLCs</relationshipLabel>
    <relationshipName>CBLCs</relationshipName>
    <type>Lookup</type>
</CustomField>