force-app/main/default/objects/Agr_CBLC__c/fields/Agr_CreationDateTime__c.field-meta.xml
<CustomField>
    <fullName>Agr_CreationDateTime__c</fullName>
    <label>Data de criação no Sinacor</label>
    <type>DateTime</type>
</CustomField>