force-app/main/default/objects/Agr_CBLC__c/fields/Agr_IndependentAdvisorCode__c.field-meta.xml
<CustomField>
    <fullName>Agr_IndependentAdvisorCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor (Barra)</label>
    <referenceTo>Agr_Bar__c</referenceTo>
    <relationshipLabel>CBLCs</relationshipLabel>
    <relationshipName>CBLCs</relationshipName>
    <type>Lookup</type>
</CustomField>