force-app/main/default/objects/Agr_CBLC__c/fields/Agr_SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>Agr_SourceSystemId__c</fullName>
    <externalId>true</externalId>
    <label>Chave única do CBLC</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>