force-app/main/default/objects/Agr_CBLC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agr_AccountId__c</columns>
    <columns>Agr_IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>